testdata/baselines/reference/submodule/compiler/genericConstraint1.errors.txt
genericConstraint1.ts(3,9): error TS2322: Type 'null' is not assignable to type 'T'.
genericConstraint1.ts(8,8): error TS2344: Type 'string' does not satisfy the constraint 'number'.


==== genericConstraint1.ts (2 errors) ====
    class C<T> {
        public bar2<U extends T>(x: T, y: U): T {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
        }
    }
    
    var x = new C<number>();
    x.bar2<string>(2, "");
           ~~~~~~
!!! error TS2344: Type 'string' does not satisfy the constraint 'number'.